<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buildingListScroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BuildingList"
    android:fadeScrollbars="false" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="30dp"
                android:text="@string/building_list_label"
                android:textColor="#000000" />

        </TableRow>
        
        <Button
            android:id="@+id/mcb_rabButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mcb_rab"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/pulloButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pullo_center"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/jrrsccButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/jrrscc"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/istButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/istc"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/eliasButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/elias"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bradleyButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bradley"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bistroButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/star"
            android:text="@string/bistro"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/lionsDenButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/star"
            android:text="@string/lions_den"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/helpDeskButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/star"
            android:text="@string/help_desk"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/gameRoomButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/star"
            android:text="@string/game_room"
            android:textColor="@color/white" />

    </TableLayout>

</ScrollView>
