
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
        xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    
    <TableLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".BuildingInfo" >

        <TextView
            android:id="@+id/buildingSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="-20dp"
            android:text="@string/building_selected"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" />
        
        <View
            android:id="@+id/topRule"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="#000000" />

        <ScrollView
            android:id="@+id/buildingSummaryAndInfoScroll"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:fadeScrollbars="false" >

            <TextView
                android:id="@+id/buildingSummaryAndInfo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="18sp"
                android:text="@string/building_summary"
                android:textColor="#000000" />

        </ScrollView>
        
        <View
            android:id="@+id/bottomRule"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_margin="20dp"
            android:layout_marginBottom="10dp"
            android:background="#000000" />
        
            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/mainMenuButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_menu"
                android:textSize="12sp"
                android:layout_marginBottom="10dp"
                fontawesometext:bb_roundedCorners="true"
                fontawesometext:bb_size="large"
                fontawesometext:bb_type="primary" >
            </com.beardedhen.androidbootstrap.BootstrapButton>

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/newBuildingButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_building"
                android:textSize="12sp"
                fontawesometext:bb_roundedCorners="true"
                fontawesometext:bb_size="large"
                fontawesometext:bb_type="primary" >
            </com.beardedhen.androidbootstrap.BootstrapButton>

    </TableLayout>
    
  </ScrollView>
