<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

	<TableLayout
	    android:id="@+id/tableLayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >

	    <View
	        android:layout_width="1dp"
	        android:layout_height="49dp" >
	    </View>

	    <TableRow
	        android:id="@+id/tableRow1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	    </TableRow>

	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="192dp"
	        android:layout_height="192dp"
	        android:contentDescription="@string/logo"
	        android:src="@drawable/logo" />

	    <View
	        android:layout_width="1dp"
	        android:layout_height="50dp" >
	    </View>
<!--
	    <Button
	        android:id="@+id/scan_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/get_directions"
	        android:textColor="@color/white" />

	    --> 

	    <com.beardedhen.androidbootstrap.BootstrapButton
	        android:id="@+id/scan_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/get_directions"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginBottom="10dp"
	        android:textSize="12sp"
	        bootstrapbutton:bb_roundedCorners="true"
	        bootstrapbutton:bb_size="large"
	        bootstrapbutton:bb_type="primary" />
	   
<!--
	    <Button
	        android:id="@+id/getInfoButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="28dp"
	        android:text="@string/get_information"
	        android:textColor="@color/white" />

	     -->

	    <com.beardedhen.androidbootstrap.BootstrapButton
	        android:id="@+id/getInfoButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/get_information"
	        android:layout_marginBottom="10dp"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:textSize="12sp"
	        bootstrapbutton:bb_roundedCorners="true"
	        bootstrapbutton:bb_size="large"
	        bootstrapbutton:bb_type="primary" />

	  <!-- 

	    <Button
	        android:id="@+id/aboutButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="26dp"
	        android:layout_marginBottom="20dp"
	        android:layout_weight="0.31"
	        android:text="@string/about"
	        android:textColor="@color/white" />
-->
	    
	<com.beardedhen.androidbootstrap.BootstrapButton
	    android:id="@+id/aboutButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/about"
	    android:textSize="12sp"
	    android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	    bootstrapbutton:bb_roundedCorners="true"
	    bootstrapbutton:bb_size="large"
	    bootstrapbutton:bb_type="primary" />
	    
	</TableLayout>
	
</ScrollView>	