<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GetDirections" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/directions"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/toFromTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/directions"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

    </TableRow>

    <View
        android:id="@+id/topRule"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_margin="20dp"
        android:background="#000000" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/directions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="350dp"
            android:text="@string/directions"
            android:textColor="#000000" />

    </ScrollView>

    <View
        android:id="@+id/View01"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_margin="20dp"
        android:background="#000000" />

    <Button
        android:id="@+id/newDestinationButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_destination"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/reScanDirectionsButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/re_scan"
        android:textColor="@color/white" />

</TableLayout>